# anki-card-manager

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  commands.py  cspell.json  pyproject.toml  scripts.py  tmp.md
alembic/: env.py
alembic/versions/: 63758d3e5234_add_language_property_to_word_entity.py  75e2b07c7a66_initial.py  8324f2f4b9c2_added_category_column.py
docker/: docker-compose.yml
docs/: PENDING.md  anki_card.html  future_features.md  language_words.csv  language_words_format.xlsx
output/: f23e6201-4ea3-41df-b44a-ebfbdf4a3fd0.csv
scripts/: base_script.py  cli.py  format.py  get_image.py  lint.py  migrate.py  start.py  start_mq.py  test.py
src/: main.py
src/app/: app_module.py
src/app/builders/: app_builder.py
src/app/enums/: app_endpoints_enum.py
src/app/routers/: app_router.py
src/common/cache/: cache_module.py
src/common/cache/services/: cache_service.py
src/common/cache/strategies/: cache_strategy.py  redis_strategy.py
src/common/celery/: celery.py
src/common/constants/: status_messages_constant.py
src/common/database/: database_module.py
src/common/database/strategies/: __init__.py  database_strategy.py  pg_strategy.py
src/common/enums/: __init__.py  language_enum.py  mq_status_enum.py  usage_enum.py  word_category_enum.py
src/common/env/: __init__.py  actions_env_config.py  ai_env_config.py  anki_env_config.py  app_env_config.py  debuggy_env_config.py  eleven_labs_env_config.py  env_config.py  giphy_env_config.py  google_env_config.py  open_ai_env_config.py  open_api_env_config.py  pg_env_config.py  pinterest_env_config.py  redis_env_config.py  unplash_env_config.py
src/common/exception_handlers/: general_exception_handler.py  http_exception_handler.py  request_exception_handler.py
src/common/exceptions/: __init__.py  image_scraping_exception.py
src/common/interceptors/: http_interceptor.py
src/common/lib/ai_client/: ai_client_adapter.py  google_ai_client_adapter.py  open_ai_client_adapter.py
src/common/lib/http_client/: http_client_adapter.py  httpx_adapter.py  request_adapter.py
src/common/lib/ipa_service/: ipa_service_adapter.py  phonemizer_adapter.py
src/common/lib/tts/: google_tts_adapter.py  tts_adapter.py
src/common/loggers/: app_logger.py  logger.py
src/common/maps/: __init__.py  language_deck_map.py  language_model_map.py  language_voice_map.py
src/common/models/: __init__.py  delete_many_model.py  http_response_model.py  list_paginated_model.py  task_response_model.py
src/common/mq/: celery.py  mq_module.py
src/common/mq/strategies/: celery_strategy.py  mq_strategy.py
src/common/types/: __init__.py  data_type.py
src/common/utils/: __init__.py  exception_utils.py  extract_exception_details.py  file_utils.py  get_status_message.py  google_utils.py  image_utils.py  language_utils.py  typed_dict_utils.py
src/common/value_objects/: id.py  value_object.py
src/health/: health_module.py
src/health/constants/: __init__.py  health_message_constant.py
src/health/controllers/: health_controller.py
src/health/models/abstracts/: health_service_abstract.py
src/health/models/dto/: health_message_dto.py
src/health/routers/: health_router.py
src/health/services/: health_service.py
src/modules/anki/: anki_module.py
src/modules/anki/controllers/: anki_controller.py
src/modules/file/: file_module.py
src/modules/language/: language_module.py
src/modules/scraper/: scraper_google.py  scraper_module.py
src/modules/task/: task_module.py
src/modules/upload/: upload_module.py
src/modules/word/: word_module.py
uploads/: example.csv
(+56 files in other folders)
